# FM3-MicRo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  asf.py  data_visualization.py  ersresearcherOneDrive - Aalto UniversityStudyMaster's Thesis2. CodeFM3-MicRo  gui.py  initializations.py  path_plotter.py  pyproject.toml  requirements.txt  run_script.bat  simulator.py
Control_Algorithms/: control_algorithm.py  control_algorithm_Closest Vector_Current_Scaled.py  control_algorithm_Closet Vector_Current_1.py  control_algorithm_Erik.py  control_algorithm_Random.py
Data/Eleventh_0.6xr_to_0.0xr/: 1_Solenoid_Calibration_Data.csv
Data/Tenth_One Solenoid Only/: 1_Solenoid_Calibration_Data.csv
FM3-MicRo_gymnasium_env/: pyproject.toml
FM3-MicRo_gymnasium_env/gymnasium_env/envs/: SingleParticleNoCargo.py
FM3-MicRo_gymnasium_env/gymnasium_env/envs/system/: simulator.py
FM3-MicRo_gymnasium_env/gymnasium_env/envs/system/Models/: Predict_rdot_from_I_r_R2_0.806_variable_start_position.pkl
Models/: Predict_rdot_from_I_r_R2_0.683_No_0.0.pkl  Predict_rdot_from_I_r_R2_0.916_No_0.0_to_0.15_shuffled.pkl
dev-scripts/: generate_changelog.py  generate_requirements.py  run_all.py
external-libs/spinnaker_python-4.0.0.116-cp310-cp310-win_amd64/: README.txt
gymnasium_envs/: pyproject.toml
gymnasium_envs/gymnasium_env/: __init__.py
media/Paper Figures and Videos/: Figures.pptx
media/Test/: Experimental_Setup_Log_Data.csv  Simulator_Log_Data.csv
outputs/4948776/: 0_output.out  1_output.out  2_output.out
outputs/4948779/: 0_error.out  0_output.out  1_error.out  1_output.out  2_error.out  2_output.out  3_error.out  3_output.out  4_error.out  4_output.out  5_error.out  5_output.out
outputs/4956672/: 0_error.out  0_output.out
outputs/4957109/: 0_output.out
outputs/4977175/: 0_error.out  0_output.out
outputs/4977181/: 0_error.out  0_output.out
run-scripts/: calculate_data_points.bat  calculate_data_points.sh  generate_reward_map.bat  generate_reward_map.sh  generate_reward_map_14b.sh  generate_reward_map_32b.sh  generate_reward_map_3b.sh  generate_reward_map_7b.sh  plot_reward_map.bat  run_script.bat  run_script_test.bat  save_reward_map_plots.bat  test_script.bat  train_script_function.bat  train_script_function.sh  train_script_llama_70b.sh  train_script_llama_8b.bat  train_script_llama_8b.sh  train_script_qwen_14b.sh  train_script_qwen_32b.sh  train_script_qwen_3b.sh  train_script_qwen_7b.sh
src/: RL.py
src/FM3-MicRo/: rl.py  (+5 more)
(+265 files in other folders)
