[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FM3-MicRo"
version = "0.0.1"

authors = [
  { name="Muhammad Usama Sattar", email="usamasattar.3347@gmail.com" },
]

description = "Application of Foundation Model Based Methdos in Magnetically Manipulated Micro-Robots. Ferromagnetic particles are controlled in a 2D plane at air-water interface using LLM Augmented RL."
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = "== 3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.urls]
Homepage = "https://github.com/MuhammadUsamaSattar/FM3-MicRo"
Issues = "https://github.com/MuhammadUsamaSattar/FM3-MicRo/issues"