[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gymnasium_env"
version = "0.0.1"
authors = [
  { name="Muhammad Usama Sattar", email="usamasattar.3347@gmail.com" },
]
description = "Gym environment wrappers for the pygame simulator and experimental setup."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "gymnasium",
  "pre-commit",
  "opencv-python",
  "pygame",
  "matplotlib",
  "numpy",
  "pysindy",
  "scipy",
  "scikit-learn",
  "PyQt5",
  "pyserial",
]